--- a/index.html
+++ b/index.html
@@ -545,6 +545,31 @@
                 <a href="#">English Speaking</a>
                 <a href="#">Google</a>
             </div>
-        </div>     
-    </body>
+        </div>    
+        <div class="numbers">
+            <div class="row">
+                <div class="count">
+                    <button class="button_one"><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" id="cds-react-aria-140" class="css-1lzurvc"><path fill-rule="evenodd" clip-rule="evenodd" d="M4.707 8l6.647-6.646-.707-.708L3.292 8l7.353 7.354.708-.707L4.707 8z" fill="currentColor"></path></svg></button>
+                    <a href="#">1</a>
+                    <a href="#">2</a>
+                    <a href="#">3</a>
+                    <span class="ellipises">...</span>
+                    <a href="#">84</a>
+                    <button class="button_two"><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" id="cds-react-aria-141" class="css-fa3pa9"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.293 8L4.646 1.354l.708-.708L12.707 8l-7.353 7.354-.708-.707L11.293 8z" fill="currentColor"></path></svg></button>
+                </div>
+            </div>
+        </div>
+    </div> 
+    <div class="summary">
+        <div class="popular">
+            <h2>In summary, here are 10 of our most popular free courses</h2>
+        </div>
+        <div class="english">
+            <ul class="list">
+                <li><a href="#">English for Common Interactions in the Workplace: Basic Level</a> : <span>Pontificia Universidad Católica de Chile</span></li>
+                <li><a href="#">Business Analysis & Process Management</a>: <span>Coursera Project Network</span></li>
+            </ul>
+        </div>
+    </div>
+</body>
 </html>
