--- a/index.html
+++ b/index.html
@@ -568,6 +568,246 @@
             <ul class="list">
                 <li><a href="#">English for Common Interactions in the Workplace: Basic Level</a> : <span>Pontificia Universidad Católica de Chile</span></li>
                 <li><a href="#">Business Analysis & Process Management</a>: <span>Coursera Project Network</span></li>
+                <li><a href="#">Build a free website with WordPress</a> : <span>Coursera Project Network</span></li>
+                <li><a href="#">Introduction to Microsoft Excel</a>: <span>Coursera Project Network</span></li>
+                <li><a href="#">English for Career Development</a> : <span>Pontificia Universidad Católica de Chile</span></li>
+                <li><a href="#">Financial Markets</a> : <span>Yale University</span></li>
+                <li><a href="#">First Step Korean</a> : <span>Yonsei University</span></li>
+                <li><a href="#">Investment Risk Management</a> : <span>Coursera Project Network</span></li>
+                <li><a href="#">Creative Thinking: Techniques and Tools for Success</a> : <span>Imperial College London</span></li>
+                <li><a href="#">Cybersecurity for Everyone</a> : <span>University of Maryland, College Park</span></li>
+            </ul>
+        </div>
+    </div>
+    <div class="questions">
+        <div class="free_questions">
+            <div class="online_courses">
+                <h2>Frequently Asked Questions about Free</h2>
+                <div class="faq">
+                    <button>
+                        <svg aria-hidden="true" class="_ufjrdd" style="fill:#2A73CC;height:24px;width:24px;transform:rotate(0deg)" viewBox="0 0 48 48" role="img" aria-labelledby="ChevronRight8eb58b87-1a4a-469d-e77f-df5ff4506eff ChevronRight8eb58b87-1a4a-469d-e77f-df5ff4506effDesc" xmlns="http://www.w3.org/2000/svg"><title id="ChevronRight8eb58b87-1a4a-469d-e77f-df5ff4506eff">Chevron Right</title><polygon transform="translate(23.999500, 24.000000) scale(-1, 1) translate(-23.999500, -24.000000)" points="16 24 30.585 40 31.999 38.586 18.828 24 31.999 9.415 30.585 8" role="presentation"></polygon></svg>
+                        <h3>What types of free courses are available online?</h3>
+                    </button>
+                </div>
+                <div class="faq">
+                    <button>
+                        <svg aria-hidden="true" class="_ufjrdd" style="fill:#2A73CC;height:24px;width:24px;transform:rotate(0deg)" viewBox="0 0 48 48" role="img" aria-labelledby="ChevronRight6ce831d2-afdb-4558-de28-b924c4876c41 ChevronRight6ce831d2-afdb-4558-de28-b924c4876c41Desc" xmlns="http://www.w3.org/2000/svg"><title id="ChevronRight6ce831d2-afdb-4558-de28-b924c4876c41">Chevron Right</title><polygon transform="translate(23.999500, 24.000000) scale(-1, 1) translate(-23.999500, -24.000000)" points="16 24 30.585 40 31.999 38.586 18.828 24 31.999 9.415 30.585 8" role="presentation"></polygon></svg>
+                        <h3>How can I choose the right free course for my learning goals?</h3>
+                    </button>
+                </div>
+                <div class="faq">
+                    <button>
+                        <svg aria-hidden="true" class="_ufjrdd" style="fill:#2A73CC;height:24px;width:24px;transform:rotate(0deg)" viewBox="0 0 48 48" role="img" aria-labelledby="ChevronRightacd3ec7a-5584-464c-c54e-642064ebd256 ChevronRightacd3ec7a-5584-464c-c54e-642064ebd256Desc" xmlns="http://www.w3.org/2000/svg"><title id="ChevronRightacd3ec7a-5584-464c-c54e-642064ebd256">Chevron Right</title><polygon transform="translate(23.999500, 24.000000) scale(-1, 1) translate(-23.999500, -24.000000)" points="16 24 30.585 40 31.999 38.586 18.828 24 31.999 9.415 30.585 8" role="presentation"></polygon></svg>
+                        <h3>What career benefits can I gain from taking free courses?</h3>
+                    </button>
+                </div>
+                <div class="content_course">
+                    <span>This FAQ content has been made available for informational purposes only. Learners are advised to conduct additional research to ensure that courses and other credentials pursued meet their personal, professional, and financial goals.</span>
+
+                </div>
+            </div>
+            <div class="topics">
+                <h2>Other topics to explore</h2>
+                <div class="arts">
+                    <div class="science">
+                        <div>Arts and Humanities</div>
+                        <span>338 courses</span>
+                    </div>
+                </div>
+                <div class="arts">
+                    <div class="science">
+                        <div>Business</div>
+                        <span>1095 courses</span>
+                    </div>
+                </div>
+                <div class="arts">
+                    <div class="science">
+                        <div>Computer Science</div>
+                        <span>668 courses</span>
+                    </div>
+                </div>
+                <div class="arts">
+                    <div class="science">
+                        <div>Data Science</div>
+                        <span>425 courses</span>
+                    </div>
+                </div>
+                <div class="arts">
+                    <div class="science">
+                        <div>Information Technology</div>
+                        <span>145 courses</span>
+                    </div>
+                </div>
+                <div class="arts">
+                    <div class="science">
+                        <div>Health</div>
+                        <span>471 courses</span>
+                    </div>
+                </div>
+                <div class="arts">
+                    <div class="science">
+                        <div>Math and Logic</div>
+                        <span>70 courses</span>
+                    </div>
+                </div>
+                <div class="arts">
+                    <div class="science">
+                        <div>Personal Development</div>
+                        <span>137 courses</span>
+                    </div>
+                </div>
+                <div class="arts">
+                    <div class="science">
+                        <div>Physical Science and Engineering</div>
+                        <span>413 courses</span>
+                    </div>
+                </div>
+                <div class="arts">
+                    <div class="science">
+                        <div>Social Sciences</div>
+                        <span>401 courses</span>
+                    </div>
+                </div>
+                <div class="arts">
+                    <div class="science">
+                        <div>Language Learning</div>
+                        <span>150 courses</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="started">
+        <div class="aws">
+            <div class="ai">
+                <p>Get Started with AI</p>
+            </div>
+            <ul>
+                <li><a href="#">AWS & DLAI GenAI with LLMs Course</a></li>
+                <li><a href="#">DLAI AI For Everyone Course</a></li>
+                <li><a href="#">Google AI Essentials Course</a></li>
+                <li><a href="#">Google Cloud Introduction to Generative AI Course</a></li>
+                <li><a href="#">Google Prompting Essentials</a></li>
+                <li><a href="#">IBM AI Engineering Professional Certificate</a></li>
+                <li><a href="#">IBM Generative AI Fundamentals Specialization</a></li>
+                <li><a href="#">IBM Introduction to Artificial Intelligence (AI)</a></li>
+                <li><a href="#">Stanford AI in Healthcare Specialization</a></li>
+                <li><a href="#">DLAI Supervised Machine Learning: Regression and Classification</a></li>
+                <li><a href="#">Vanderbilt Prompt Engineering for ChatGPT Course</a></li>
+            </ul>
+        </div>
+        <div class="aws">
+            <div class="ai">
+                <p>Popular Career Certificates</p>
+            </div>
+            <ul>
+                <li><a href="#">Adobe Content Creator Professional Certificate</a></li>
+                <li><a href="#">Google Cybersecurity Professional Certificate</a></li>
+                <li><a href="#">Google Data Analytics Professional Certificate</a></li>
+                <li><a href="#">Google Digital Marketing Professional Certificate</a></li>
+                <li><a href="#">Google IT Support Professional Certificate</a></li>
+                <li><a href="#">Google Project Management Professional Certificate</a></li>
+                <li><a href="#">Google UX Design Professional Certificate</a></li>
+                <li><a href="#">IBM Data Science Professional Certificate</a></li>
+                <li><a href="#">Meta Front-End Developer Professional Certificate</a></li>
+                <li><a href="#">Microsoft Power BI Data Analyst Professional Certificate</a></li>
+                <li><a href="#">All Career Certificates</a></li>
+            </ul>
+        </div>
+        <div class="aws">
+            <div class="ai">
+                <p>Popular Subjects</p>
+            </div>
+            <ul>
+                <li><a href="#">Artificial Intelligence</a></li>
+                <li><a href="#">Cybersecurity</a></li>
+                <li><a href="#">Data Analytics</a></li>
+                <li><a href="#">Digital Marketing</a></li>
+                <li><a href="#">Generative AI</a></li>
+                <li><a href="#">Graphic Design</a></li>
+                <li><a href="#">Machine Learning</a></li>
+                <li><a href="#">Microsoft Excel</a></li>
+                <li><a href="#">Microsof Power BI</a></li>
+                <li><a href="#">Project Management</a></li>
+                <li><a href="#">Python</a></li>
+                <li><a href="#">SQL</a></li>
+                <li><a href="#">All Courses</a></li>
+            </ul>
+        </div>
+        <div class="aws">
+            <div class="ai">
+                <p>Popular Resources</p>
+            </div>
+            <ul>
+                <li><a href="#">High-Income Skills Worth Learning</a></li>
+                <li><a href="#">How to Get a PMP Certification</a></li>
+                <li><a href="#">Free IT Certifications and Courses</a></li>
+                <li><a href="#">Google Analytics Certification: Benefits and How to Get It</a></li>
+                <li><a href="#">Popular Cybersecurity Certifications</a></li>
+                <li><a href="#">Popular Cybersecurity Certifications</a></li>
+                <li><a href="#">Popular IT Certifications</a></li>
+                <li><a href="#">What Does a Data Analyst Do?</a></li>
+                <li><a href="#">What Is the CAPM Certification</a></li>
+                <li><a href="#">Career Insights & Advice Hub</a></li>
+                <li><a href="#">Career Insights & Advice Hub</a></li>
+                <li><a href="#">Career Aptitude Test</a></li>
+            </ul>
+        </div>
+        <div class="aws">
+            <div class="ai">
+                <p>Coursera</p>
+            </div>
+            <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">What We Offer</a></li>
+                <li><a href="#">Leadership</a></li>
+                <li><a href="#">Careers</a></li>
+                <li><a href="#">Catalog</a></li>
+                <li><a href="#">Coursera Plus</a></li>
+                <li><a href="#">Professional Certificates</a></li>
+                <li><a href="#">MasterTrack® Certificates</a></li>
+                <li><a href="#">Microsof Power BI</a></li>
+                <li><a href="#">Degrees</a></li>
+                <li><a href="#">For Government</a></li>
+                <li><a href="#">For Campus</a></li>
+                <li><a href="#">Become a Partner</a></li>
+                <li><a href="#">Social Impact</a></li>
+                <li><a href="#">Free Courses</a></li>
+                <li><a href="#">ECTS Credit Recommendations</a></li>
+            </ul>
+        </div>
+        <div class="aws">
+            <div class="ai">
+                <p>Community</p>
+            </div>
+            <ul>
+                <li><a href="#">Learners</a></li>
+                <li><a href="#">Partners</a></li>
+                <li><a href="#">Beta Testers</a></li>
+                <li><a href="#">Beta Testers</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">The Coursera Podcast</a></li>
+                <li><a href="#">Tech Blog</a></li>
+                <li><a href="#">Teaching Center</a></li>
+            </ul>
+        </div>
+        <div class="aws">
+            <div class="ai">
+                <p>More</p>
+            </div>
+            <ul>
+                <li><a href="#">Press</a></li>
+                <li><a href="#">Investors</a></li>
+                <li><a href="#">Terms</a></li>
+                <li><a href="#">Privacy</a></li>
+                <li><a href="#">Help</a></li>
+                <li><a href="#">Accessibility</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Articles</a></li>
+                <li><a href="#">Directory</a></li>
+                <li><a href="#">Affiliates</a></li>
+                <li><a href="#">Modern Slavery Statement</a></li>
+                <li><a href="Manage Cookie Preferences"></a></li>
             </ul>
         </div>
     </div>
