--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
                 <a href="browse">Browse</a>
             </div>
         </div>
-        <!-- <div class="free_courses">
+        <div class="free_courses">
             <h2>Free Courses Online</h2>
             <p>Explore Free courses across various topics that provide foundational skills in areas like programming, data analysis, and digital marketing. Increase your knowledge or enhance your skills without any financial commitment. Verify a course is free by looking for the 'Free' tag on the course selection.</p>
-        </div> -->
+        </div>
     </div>
     <div class="course_div">
         <div class="courses">
@@ -938,3 +938,4 @@
     </footer>    
 </body>
 </html>
+
