--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         </div>
         <div class="whole">
             <div class="whole_free">
+                <div class="whole_double_free"></div>
                 <div class="free">
                     <div class="english_whole">
                         <ul >
