--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="product_card">
+                                                        <div></div>
                                                         <div class="star">
                                                             <div class="star_two">
                                                                 <div class="star_rating">
