--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
                                 <div class="common">
                                     <div class="process">
                                         <div class="workplace">
-                                            <div class="free_button">
-                                                <span class="free_buttons" id="free_button" style="display: none;">Free</span>
+                                            <div class="free_button"  style="display: none";>
+                                                <span class="free_buttons" id="free_button">Free</span>
                                             </div>
                                             <div class="project">
                                                 <div class="net">
@@ -164,51 +164,55 @@
                                     </div>
                                 </div>
                             </li>
-                            <!-- <li>
+                            <li>
                                 <div class="common">
                                     <div class="process">
                                         <div class="workplace">
+                                            <div class="free_button"  style="display: none";>
+                                                <span class="free_buttons" id="free_button">Free</span>
+                                            </div>
                                             <div class="project">
                                                 <div class="net">
                                                     <div class="business">
                                                         <div class="business_img">
                                                             <img src="https://d3njjcbhbojbot.cloudfront.net/api/utilities/v1/imageproxy/http://coursera-university-assets.s3.amazonaws.com/89/a0db8f3ea3417ca90d4f3a4ca1d73e/coursera-projectnetwork-purplesquare.png?auto=format%2Ccompress&amp;dpr=3&amp;w=24&amp;h=24" alt="">
                                                             <p>Coursera Project Network</p>
+                                                        
                                                         </div>
                                                         <div class="analysis">
-                                                            <h3>Business Analysis & Process Management</h3>
+                                                            <h3>Build a free website with WordPress</h3>
                                                         </div>
                                                     </div>
                                                     <div class="skills">
                                                         <p class="skill">
                                                             <b class="skill_gain">Skills you'll gain:</b>
-                                                            Business Analysis, Business Process Management
+                                                            Creativity, Web Design, Web Development
                                                         </p>
                                                     </div>
                                                     <div class="product_card">
                                                         <div class="star">
-                                                            <div></div>
+                                                            <div ></div>
                                                             <div class="star_two">
                                                                 <div class="star_rating">
                                                                     <svg aria-hidden="true" fill="none" focusable="false" height="20" viewBox="0 0 20 20" width="20" class="star_two" id="cds-react-aria-248"><path d="M17.51 7.77h-5.32l-1.78-5.46a.45.45 0 00-.85 0l-1.8 5.46H2.45A.45.45 0 002 8.2a.43.43 0 00.16.35L6.66 12l-1.72 5.43a.45.45 0 00.3.56.43.43 0 00.39-.08L10 14.53l4.38 3.38a.44.44 0 00.69-.48L13.33 12l4.49-3.44a.43.43 0 00-.03-.73.501.501 0 00-.28-.06z" fill="#F2D049"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M9.7 1.547a.947.947 0 011.199.62l1.666 5.111 4.967-.003a.923.923 0 01.794.388.922.922 0 01-.216 1.294l-4.19 3.212 1.621 5.083a.931.931 0 01-1.475 1.03l-4.05-3.132-4.053 3.163a.934.934 0 01-.838.158.94.94 0 01-.643-1.177l.002-.006 1.618-5.094-4.207-3.213a.94.94 0 01.612-1.702h4.91L9.111 2.13a.94.94 0 01.58-.58l.009-.003zm7.656 6.728l-5.517.004L10 2.632 8.14 8.28H2.623l4.645 3.547-1.773 5.584 4.518-3.526 4.519 3.494-1.78-5.575 4.604-3.528z" fill="#7C6919"></path></svg>
                                                                     <span class="rating">4.4</span>
                                                                 </div>
                                                                 <span>·</span>
-                                                                <div class="reviews">5.6K reviews</div>
+                                                                <div class="reviews">1.3K reviews</div>
                                                             </div>
-                                                            <div class="begineer">Beginner · Guided Project · Less Than 2 Hours</div>
+                                                            <div class="begineer">Intermediate · Guided Project · Less Than 2 Hours</div>
                                                         </div>
                                                     </div>
                                                 </div>
                                                 <div class="course_business">
-                                                    <img src="https://d3njjcbhbojbot.cloudfront.net/api/utilities/v1/imageproxy/https://s3.amazonaws.com/coursera-course-photos/59/630408b17e41429a019ada61f22bc8/Courses-Project-images-06.png?auto=format%2Ccompress%2C%20enhance&amp;dpr=1&amp;w=265&amp;h=216&amp;fit=crop&amp;q=50" srcset="https://d3njjcbhbojbot.cloudfront.net/api/utilities/v1/imageproxy/https://s3.amazonaws.com/coursera-course-photos/59/630408b17e41429a019ada61f22bc8/Courses-Project-images-06.png?auto=format%2Ccompress%2C%20enhance&amp;dpr=2&amp;w=265&amp;h=216&amp;fit=crop&amp;q=50 2x, https://d3njjcbhbojbot.cloudfront.net/api/utilities/v1/imageproxy/https://s3.amazonaws.com/coursera-course-photos/59/630408b17e41429a019ada61f22bc8/Courses-Project-images-06.png?auto=format%2Ccompress%2C%20enhance&amp;dpr=3&amp;w=265&amp;h=216&amp;fit=crop&amp;q=50 3x" alt="" fetchpriority="high">
+                                                    <img src="https://d3njjcbhbojbot.cloudfront.net/api/utilities/v1/imageproxy/https://s3.amazonaws.com/coursera-course-photos/da/c8df3880a940c8a4bb5e7467eb202a/wordpress_logo.png?auto=format%2Ccompress%2C%20enhance&amp;dpr=1&amp;w=265&amp;h=216&amp;fit=crop&amp;q=50" srcset="https://d3njjcbhbojbot.cloudfront.net/api/utilities/v1/imageproxy/https://s3.amazonaws.com/coursera-course-photos/da/c8df3880a940c8a4bb5e7467eb202a/wordpress_logo.png?auto=format%2Ccompress%2C%20enhance&amp;dpr=2&amp;w=265&amp;h=216&amp;fit=crop&amp;q=50 2x, https://d3njjcbhbojbot.cloudfront.net/api/utilities/v1/imageproxy/https://s3.amazonaws.com/coursera-course-photos/da/c8df3880a940c8a4bb5e7467eb202a/wordpress_logo.png?auto=format%2Ccompress%2C%20enhance&amp;dpr=3&amp;w=265&amp;h=216&amp;fit=crop&amp;q=50 3x" alt=""></div>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                            </li> -->
-                            <li>
+                            </li>
+                            <!-- <li>
                                 <div class="common">
                                     <div class="process">
                                         <div class="workplace">
@@ -251,7 +255,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </li>
+                            </li> -->
                             <li>
                                 <div class="common">
                                     <div class="process">
