--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
                                                                 <span>·</span>
                                                                 <div class="reviews">20K reviews</div>
                                                             </div>
-                                                            <div class="begineer">Mixed Course 1 - 3 Months </div>
+                                                            <div class="begineer">Mixed · Course · 1 - 3 Months </div>
                                                         </div>
                                                     </div>
                                                 </div>
