--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                <!-- </div> -->
                             </li>
                             <li>
                                 <div class="common">
@@ -298,7 +298,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                <!-- </div> -->
                             </li>
                             <li>
                                 <div class="common">
@@ -659,9 +659,9 @@
         </div>
         <div class="english">
             <ul class="list">
-                <li><a href="#">English for Common Interactions in the Workplace: Basic Level</a> : <span>Pontificia Universidad Católica de Chile</span></li>
+                <li><a href="#">English for Common Interactions in the Workplace: Basic Level</a>: <span>Pontificia Universidad Católica de Chile</span></li>
                 <li><a href="#">Business Analysis & Process Management</a>: <span>Coursera Project Network</span></li>
-                <li><a href="#">Build a free website with WordPress</a> : <span>Coursera Project Network</span></li>
+                <li><a href="#">Build a free website with WordPress</a>: <span>Coursera Project Network</span></li>
                 <li><a href="#">Introduction to Microsoft Excel</a>: <span>Coursera Project Network</span></li>
                 <li><a href="#">English for Career Development</a> : <span>Pontificia Universidad Católica de Chile</span></li>
                 <li><a href="#">Financial Markets</a> : <span>Yale University</span></li>
@@ -969,3 +969,4 @@
     </footer>    
 </body>
 </html>
+
