--- a/index.html
+++ b/index.html
@@ -629,14 +629,15 @@
                 <h2>Free learners also search</h2>
             </div>
             <div class="excel">
-                <a href="#">Artificial Intelligence</a>
-                <a href="#">Excel</a>
-                <a href="#">Digital Marketing</a>
-                <a href="#">Cybersecurity</a>
-                <a href="#">Python</a>
-                <a href="#">Data Analytics</a>
-                <a href="#">English Speaking</a>
-                <a href="#">Google</a>
+                <div class="excel_a"><a href="#">Artificial Intelligence</a></div>
+                <div class="excel_a"><a href="#">Excel</a></div>
+                <div class="excel_a"><a href="#">Digital Marketing</a></div>
+                <div class="excel_a"><a href="#">Cybersecurity</a></div>
+                <div class="excel_a"><a href="#">Python</a></div>
+                .excel_a
+                <a href="#">Data Analytics</a></div>
+                <a href="#">English Speaking</a></div>
+                <a href="#">Google</a></div>
             </div>
         </div>    
         <div class="numbers">
