--- a/index.html
+++ b/index.html
@@ -634,10 +634,9 @@
                 <div class="excel_a"><a href="#">Digital Marketing</a></div>
                 <div class="excel_a"><a href="#">Cybersecurity</a></div>
                 <div class="excel_a"><a href="#">Python</a></div>
-                .excel_a
-                <a href="#">Data Analytics</a></div>
-                <a href="#">English Speaking</a></div>
-                <a href="#">Google</a></div>
+                <div class="excel_a"><a href="#">Data Analytics</a></div>
+                <div class="excel_a"><a href="#">English Speaking</a></div>
+                <div class="excel_a"><a href="#">Google</a></div>
             </div>
         </div>    
         <div class="numbers">
