--- a/index.html
+++ b/index.html
@@ -678,16 +678,27 @@
                 <h2>Frequently Asked Questions about Free</h2>
                 <div class="button_faq">
                     <div class="faq">
-                        <svg aria-hidden="true" class="arrow_" style="fill:#2A73CC;height:24px;width:24px;transform:rotate(0deg)" viewBox="0 0 48 48" role="img" aria-labelledby="ChevronRight8eb58b87-1a4a-469d-e77f-df5ff4506eff ChevronRight8eb58b87-1a4a-469d-e77f-df5ff4506effDesc" xmlns="http://www.w3.org/2000/svg"><title id="ChevronRight8eb58b87-1a4a-469d-e77f-df5ff4506eff">Chevron Right</title><polygon transform="translate(23.999500, 24.000000) scale(-1, 1) translate(-23.999500, -24.000000)" points="16 24 30.585 40 31.999 38.586 18.828 24 31.999 9.415 30.585 8" role="presentation"></polygon></svg>
-                        <h3>What types of free courses are available online?</h3>
+                        <div class="there">
+                            <svg aria-hidden="true" class="arrow_" style="fill:#2A73CC;height:24px;width:24px;transform:rotate(0deg)" viewBox="0 0 48 48" role="img" aria-labelledby="ChevronRight8eb58b87-1a4a-469d-e77f-df5ff4506eff ChevronRight8eb58b87-1a4a-469d-e77f-df5ff4506effDesc" xmlns="http://www.w3.org/2000/svg"><title id="ChevronRight8eb58b87-1a4a-469d-e77f-df5ff4506eff">Chevron Right</title><polygon transform="translate(23.999500, 24.000000) scale(-1, 1) translate(-23.999500, -24.000000)" points="16 24 30.585 40 31.999 38.586 18.828 24 31.999 9.415 30.585 8" role="presentation"></polygon></svg>
+                            <h3>What types of free courses are available online?</h3>
+                        </div>
+                        <div class="variety">
+                            <div class="subjects_active">
+                                <p>There are a wide variety of free courses available online across numerous fields and subjects. These include courses in <a href="#">programming</a>, <a href="#">digital marketing</a>, <a href="#">business management</a>, <a href="#">generative AI</a>, and <a href="#">data science</a>. Learners can also find free courses in creative fields such as <a href="#">graphic design</a>, <a href="#">music production</a>, and <a href="#">writing</a>. Additionally, there are free courses covering personal development topics like <a href="#">time management</a>, <a href="#">communication skills</a>, and <a href="#">emotional intelligence</a>. Many of these courses are offered by prestigious universities and institutions, providing high-quality education at no cost.</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="faq">
-                        <svg aria-hidden="true" class="arrow_" style="fill:#2A73CC;height:24px;width:24px;transform:rotate(0deg)" viewBox="0 0 48 48" role="img" aria-labelledby="ChevronRight6ce831d2-afdb-4558-de28-b924c4876c41 ChevronRight6ce831d2-afdb-4558-de28-b924c4876c41Desc" xmlns="http://www.w3.org/2000/svg"><title id="ChevronRight6ce831d2-afdb-4558-de28-b924c4876c41">Chevron Right</title><polygon transform="translate(23.999500, 24.000000) scale(-1, 1) translate(-23.999500, -24.000000)" points="16 24 30.585 40 31.999 38.586 18.828 24 31.999 9.415 30.585 8" role="presentation"></polygon></svg>
-                        <h3>How can I choose the right free course for my learning goals?</h3>
+                        <div class="there">
+                            <svg aria-hidden="true" class="arrow_" style="fill:#2A73CC;height:24px;width:24px;transform:rotate(0deg)" viewBox="0 0 48 48" role="img" aria-labelledby="ChevronRight6ce831d2-afdb-4558-de28-b924c4876c41 ChevronRight6ce831d2-afdb-4558-de28-b924c4876c41Desc" xmlns="http://www.w3.org/2000/svg"><title id="ChevronRight6ce831d2-afdb-4558-de28-b924c4876c41">Chevron Right</title><polygon transform="translate(23.999500, 24.000000) scale(-1, 1) translate(-23.999500, -24.000000)" points="16 24 30.585 40 31.999 38.586 18.828 24 31.999 9.415 30.585 8" role="presentation"></polygon></svg>
+                            <h3>How can I choose the right free course for my learning goals?</h3>
+                        </div>
                     </div>
                     <div class="faq">
-                        <svg aria-hidden="true" class="arrow_" style="fill:#2A73CC;height:24px;width:24px;transform:rotate(0deg)" viewBox="0 0 48 48" role="img" aria-labelledby="ChevronRightacd3ec7a-5584-464c-c54e-642064ebd256 ChevronRightacd3ec7a-5584-464c-c54e-642064ebd256Desc" xmlns="http://www.w3.org/2000/svg"><title id="ChevronRightacd3ec7a-5584-464c-c54e-642064ebd256">Chevron Right</title><polygon transform="translate(23.999500, 24.000000) scale(-1, 1) translate(-23.999500, -24.000000)" points="16 24 30.585 40 31.999 38.586 18.828 24 31.999 9.415 30.585 8" role="presentation"></polygon></svg>
-                        <h3>What career benefits can I gain from taking free courses?</h3>
+                        <div class="there">
+                            <svg aria-hidden="true" class="arrow_" style="fill:#2A73CC;height:24px;width:24px;transform:rotate(0deg)" viewBox="0 0 48 48" role="img" aria-labelledby="ChevronRightacd3ec7a-5584-464c-c54e-642064ebd256 ChevronRightacd3ec7a-5584-464c-c54e-642064ebd256Desc" xmlns="http://www.w3.org/2000/svg"><title id="ChevronRightacd3ec7a-5584-464c-c54e-642064ebd256">Chevron Right</title><polygon transform="translate(23.999500, 24.000000) scale(-1, 1) translate(-23.999500, -24.000000)" points="16 24 30.585 40 31.999 38.586 18.828 24 31.999 9.415 30.585 8" role="presentation"></polygon></svg>
+                            <h3>What career benefits can I gain from taking free courses?</h3>
+                        </div>
                     </div>
                 </div>
                 <div class="content_course">
