--- a/index.html
+++ b/index.html
@@ -693,11 +693,21 @@
                             <svg aria-hidden="true" class="arrow_" style="fill:#2A73CC;height:24px;width:24px;transform:rotate(0deg)" viewBox="0 0 48 48" role="img" aria-labelledby="ChevronRight6ce831d2-afdb-4558-de28-b924c4876c41 ChevronRight6ce831d2-afdb-4558-de28-b924c4876c41Desc" xmlns="http://www.w3.org/2000/svg"><title id="ChevronRight6ce831d2-afdb-4558-de28-b924c4876c41">Chevron Right</title><polygon transform="translate(23.999500, 24.000000) scale(-1, 1) translate(-23.999500, -24.000000)" points="16 24 30.585 40 31.999 38.586 18.828 24 31.999 9.415 30.585 8" role="presentation"></polygon></svg>
                             <h3>How can I choose the right free course for my learning goals?</h3>
                         </div>
+                        <div class="variety">
+                            <div class="subjects_active">
+                                <p class="subject_p">Choosing the right free course depends on your current knowledge level and learning objectives. Begin by identifying the specific skills or knowledge you want to acquire. Look for courses that match your interests and career goals. Review course content, instructor credentials, and learner feedback to ensure the quality of the course.</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="faq">
                         <div class="there">
                             <svg aria-hidden="true" class="arrow_" style="fill:#2A73CC;height:24px;width:24px;transform:rotate(0deg)" viewBox="0 0 48 48" role="img" aria-labelledby="ChevronRightacd3ec7a-5584-464c-c54e-642064ebd256 ChevronRightacd3ec7a-5584-464c-c54e-642064ebd256Desc" xmlns="http://www.w3.org/2000/svg"><title id="ChevronRightacd3ec7a-5584-464c-c54e-642064ebd256">Chevron Right</title><polygon transform="translate(23.999500, 24.000000) scale(-1, 1) translate(-23.999500, -24.000000)" points="16 24 30.585 40 31.999 38.586 18.828 24 31.999 9.415 30.585 8" role="presentation"></polygon></svg>
                             <h3>What career benefits can I gain from taking free courses?</h3>
+                        </div>
+                        <div class="variety">
+                            <div class="subjects_active">
+                                <p class="subject_p">Taking free courses can offer numerous career benefits, including skill enhancement, career advancement, and increased employability. By acquiring new skills or improving existing ones, you can stay competitive in your field and open up opportunities for promotions or new job roles. Free courses can also help you explore new career paths or interests without financial investment. Additionally, completing free courses from reputable institutions can add value to your resume and demonstrate your commitment to continuous learning and professional development to potential employers.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -812,7 +822,8 @@
         </div>
     </div>
     <footer class="footer">
-        <div class="started">
+    <div class="footer_whole">
+            <div class="started">
             <div class="aws">
                 <div class="ai">
                     <p>Get Started with AI</p>
@@ -960,6 +971,7 @@
                 <img src="https://d3njjcbhbojbot.cloudfront.net/api/utilities/v1/imageproxy/https://d3njjcbhbojbot.cloudfront.net/web/images/icons/2018-B-Corp-Logo-Black-S.png?auto=format%2Ccompress&amp;dpr=1&amp;w=151&amp;h=120&amp;q=40" srcset="https://d3njjcbhbojbot.cloudfront.net/api/utilities/v1/imageproxy/https://d3njjcbhbojbot.cloudfront.net/web/images/icons/2018-B-Corp-Logo-Black-S.png?auto=format%2Ccompress&amp;dpr=2&amp;w=151&amp;h=120&amp;q=40 2x, https://d3njjcbhbojbot.cloudfront.net/api/utilities/v1/imageproxy/https://d3njjcbhbojbot.cloudfront.net/web/images/icons/2018-B-Corp-Logo-Black-S.png?auto=format%2Ccompress&amp;dpr=3&amp;w=151&amp;h=120&amp;q=40 3x" width="82" height="120" alt="Logo of Certified B Corporation" style="max-width: 151px; max-height: 120px;">
             </div>
         </div>
+    </div>    
         <div class="apps">
             <div class="facebook">
                 <div class="type_apps">
