--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <header>
+        <div class="header_individual">
+            
+        </div>
         <div class="header">
             <div class="whole_header">
                 <button data-track="true" data-track-app="seo_entity_page" data-track-page="search" data-track-action="click" data-track-component="mobile_header_nav_button" data-e2e="mobile-nav-icon" class="c-mobile-toggle-button css-t3v7te" aria-label="Open Navigation Menu" aria-expanded="false" type="button"><svg aria-hidden="true" fill="none" focusable="false" height="20" viewBox="0 0 20 20" width="20" id="cds-react-aria-2" class="css-1u8qly9"><path fill-rule="evenodd" clip-rule="evenodd" d="M18 11H2V9h16v2zM18 5H2V3h16v2zM18 17H2v-2h16v2z" fill="currentColor"></path></svg></button>
