--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                         <ul>
                                             <li><a href="#">Online Degrees</a></li>
                                             <li><a href="#">Careers</a></li>
-                                            <li><a href="#">Log In</a></li>
+                                            <li><a href="#" class="log_in">Log In</a></li>
                                             <li><a href="#" class="join_li">Join for Free</a></li>
                                         </ul>
                                     </div>
@@ -1514,11 +1514,6 @@
                     <img src="https://d3njjcbhbojbot.cloudfront.net/api/utilities/v1/imageproxy/https://d3njjcbhbojbot.cloudfront.net/web/images/icons/2018-B-Corp-Logo-Black-S.png?auto=format%2Ccompress&amp;dpr=1&amp;w=151&amp;h=120&amp;q=40" srcset="https://d3njjcbhbojbot.cloudfront.net/api/utilities/v1/imageproxy/https://d3njjcbhbojbot.cloudfront.net/web/images/icons/2018-B-Corp-Logo-Black-S.png?auto=format%2Ccompress&amp;dpr=2&amp;w=151&amp;h=120&amp;q=40 2x, https://d3njjcbhbojbot.cloudfront.net/api/utilities/v1/imageproxy/https://d3njjcbhbojbot.cloudfront.net/web/images/icons/2018-B-Corp-Logo-Black-S.png?auto=format%2Ccompress&amp;dpr=3&amp;w=151&amp;h=120&amp;q=40 3x" width="82" height="120" alt="Logo of Certified B Corporation" style="max-width: 151px; max-height: 120px;">
                 </div>
             </div>
-
-
-
-
-
         </div>
         <div class="learn">
             <div class="anywhere">Learn Anywhere</div>
