--- a/index.html
+++ b/index.html
@@ -89,21 +89,22 @@
             </div>
         </div>
     </header>
-
-    <div class="browse">
-        <div class="browse_arrow">
-            <div class="left_arrow">
-                <svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" class="breadcrumb-divider css-17st3jf" id="cds-react-aria-5"><path fill-rule="evenodd" clip-rule="evenodd" d="M4.707 8l6.647-6.646-.707-.708L3.292 8l7.353 7.354.708-.707L4.707 8z" fill="#0F1114"></path></svg>
+    <div class="whole_browse">
+        <div class="browse">
+            <div class="browse_arrow">
+                <div class="left_arrow">
+                    <svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" class="breadcrumb-divider css-17st3jf" id="cds-react-aria-5"><path fill-rule="evenodd" clip-rule="evenodd" d="M4.707 8l6.647-6.646-.707-.708L3.292 8l7.353 7.354.708-.707L4.707 8z" fill="#0F1114"></path></svg>
+                </div>
+                <div class="a_browse">
+                    <a href="browse">Browse</a>
+                </div>
             </div>
-            <div class="a_browse">
-                <a href="browse">Browse</a>
+            <div class="free_courses">
+                <h2>Free Courses Online</h2>
+                <p>Explore Free courses across various topics that provide foundational skills in areas like programming, data analysis, and digital marketing. Increase your knowledge or enhance your skills without any financial commitment. Verify a course is free by looking for the 'Free' tag on the course selection.</p>
             </div>
         </div>
-        <div class="free_courses">
-            <h2>Free Courses Online</h2>
-            <p>Explore Free courses across various topics that provide foundational skills in areas like programming, data analysis, and digital marketing. Increase your knowledge or enhance your skills without any financial commitment. Verify a course is free by looking for the 'Free' tag on the course selection.</p>
-        </div>
-    </div>
+    </div>    
     <div class="course_div">
         <div class="filter_by">
             <div class="data_science">
