--- a/index.html
+++ b/index.html
@@ -609,11 +609,11 @@
                     <span class="button_span">Filters</span>
                     <svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" id="cds-react-aria-164" class=""><path fill-rule="evenodd" clip-rule="evenodd" d="M12.5 11.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0z" fill="currentColor"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M11 13H2v-1h9v1zM12.5 2.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0z" fill="currentColor"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M11 4H2V3h9v1zM5 8.5H2v-1h3v1zM14 8.5H8v-1h6v1z" fill="currentColor"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M6.5 7a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0z" fill="currentColor"></path></svg>
                 </button>
-                <div class="filter_two">
+                <div class="filter_two ">
                     <div class="products">
                         <div class="close">
                             <h2>Filter by: </h2>
-                            <button>
+                            <button class="close_span ">
                                 <span>Close</span>
                                 <span><svg aria-hidden="true" fill="none" focusable="false" height="20" viewBox="0 0 20 20" width="20" id="cds-react-aria-188" class="css-1u8qly9"><path fill-rule="evenodd" clip-rule="evenodd" d="M17.646 18.354l-16-16 .708-.708 16 16-.707.708z" fill="currentColor"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M18.409 2.354l-16.056 16-.706-.708 16.056-16 .706.708z" fill="currentColor"></path></svg></span>
                             </button>
@@ -623,8 +623,8 @@
                                 <div class="technology">
                                     <div class="grid">
                                         <h3>
-                                            <button>
-                                                <svg aria-hidden="true" fill="none" focusable="false" height="20" viewBox="0 0 20 20" width="20" class="cds-AccordionHeader-chevron css-1u8qly9" id="cds-react-aria-190"><path fill-rule="evenodd" clip-rule="evenodd" d="M14.293 10L5.646 1.354l.708-.708L15.707 10l-9.353 9.354-.708-.707L14.293 10z" fill="currentColor"></path></svg>
+                                            <button class="grid_span">
+                                                <svg aria-hidden="true" fill="none" focusable="false" height="20" viewBox="0 0 20 20" width="20" class="grid_span_a" id="cds-react-aria-190"><path fill-rule="evenodd" clip-rule="evenodd" d="M14.293 10L5.646 1.354l.708-.708L15.707 10l-9.353 9.354-.708-.707L14.293 10z" fill="currentColor"></path></svg>
                                                 <div class="label_group">
                                                     <span>Subject</span>
                                                 </div>
@@ -640,11 +640,11 @@
                             <div class="technology">
                                 <div class="grid">
                                     <h3>
-                                        <button>
-                                            <svg aria-hidden="true" fill="none" focusable="false" height="20" viewBox="0 0 20 20" width="20" class="cds-AccordionHeader-chevron css-1u8qly9" id="cds-react-aria-190"><path fill-rule="evenodd" clip-rule="evenodd" d="M14.293 10L5.646 1.354l.708-.708L15.707 10l-9.353 9.354-.708-.707L14.293 10z" fill="currentColor"></path></svg>
+                                        <button class="grid_span">
+                                            <svg aria-hidden="true" fill="none" focusable="false" height="20" viewBox="0 0 20 20" width="20" class="grid_span_a" id="cds-react-aria-190"><path fill-rule="evenodd" clip-rule="evenodd" d="M14.293 10L5.646 1.354l.708-.708L15.707 10l-9.353 9.354-.708-.707L14.293 10z" fill="currentColor"></path></svg>
                                             <div class="label_group">
                                                 <span>Language</span>
-                                                <span><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" class="cds-HeaderSupportText-icon css-17st3jf" id="cds-react-aria-201"><path d="M8 1a7 7 0 100 14A7 7 0 008 1zm0 1.67a1.16 1.16 0 11.06 2.32A1.16 1.16 0 018 2.67zm2.5 10.21h-5v-2H7V8H5.5V6H9v4.89h1.5v1.99z" fill="currentColor"></path></svg>
+                                                <span class="span_grid"><svg aria-hidden="true" fill="none" focusable="false" height="16" viewBox="0 0 16 16" width="16" class="span_flex" id="cds-react-aria-201"><path d="M8 1a7 7 0 100 14A7 7 0 008 1zm0 1.67a1.16 1.16 0 11.06 2.32A1.16 1.16 0 018 2.67zm2.5 10.21h-5v-2H7V8H5.5V6H9v4.89h1.5v1.99z" fill="currentColor"></path></svg>
                                                     The language used throughout the course, in both instruction and assessments.
                                                 </span>
                                             </div>
@@ -659,8 +659,8 @@
                             <div class="technology">
                                 <div class="grid">
                                     <h3>
-                                        <button>
-                                            <svg aria-hidden="true" fill="none" focusable="false" height="20" viewBox="0 0 20 20" width="20" class="cds-AccordionHeader-chevron css-1u8qly9" id="cds-react-aria-190"><path fill-rule="evenodd" clip-rule="evenodd" d="M14.293 10L5.646 1.354l.708-.708L15.707 10l-9.353 9.354-.708-.707L14.293 10z" fill="currentColor"></path></svg>
+                                        <button class="grid_span">
+                                            <svg aria-hidden="true" fill="none" focusable="false" height="20" viewBox="0 0 20 20" width="20" class="grid_span_a" id="cds-react-aria-190"><path fill-rule="evenodd" clip-rule="evenodd" d="M14.293 10L5.646 1.354l.708-.708L15.707 10l-9.353 9.354-.708-.707L14.293 10z" fill="currentColor"></path></svg>
                                             <div class="label_group">
                                                 <span>Learning Product</span>
                                             </div>
@@ -675,8 +675,8 @@
                             <div class="technology">
                                 <div class="grid">
                                     <h3>
-                                        <button>
-                                            <svg aria-hidden="true" fill="none" focusable="false" height="20" viewBox="0 0 20 20" width="20" class="cds-AccordionHeader-chevron css-1u8qly9" id="cds-react-aria-190"><path fill-rule="evenodd" clip-rule="evenodd" d="M14.293 10L5.646 1.354l.708-.708L15.707 10l-9.353 9.354-.708-.707L14.293 10z" fill="currentColor"></path></svg>
+                                        <button class="grid_span">
+                                            <svg aria-hidden="true" fill="none" focusable="false" height="20" viewBox="0 0 20 20" width="20" class="grid_span_a" id="cds-react-aria-190"><path fill-rule="evenodd" clip-rule="evenodd" d="M14.293 10L5.646 1.354l.708-.708L15.707 10l-9.353 9.354-.708-.707L14.293 10z" fill="currentColor"></path></svg>
                                             <div class="label_group">
                                                 <span>Level</span>
                                             </div>
@@ -691,8 +691,8 @@
                             <div class="technology">
                                 <div class="grid">
                                     <h3>
-                                        <button>
-                                            <svg aria-hidden="true" fill="none" focusable="false" height="20" viewBox="0 0 20 20" width="20" class="cds-AccordionHeader-chevron css-1u8qly9" id="cds-react-aria-190"><path fill-rule="evenodd" clip-rule="evenodd" d="M14.293 10L5.646 1.354l.708-.708L15.707 10l-9.353 9.354-.708-.707L14.293 10z" fill="currentColor"></path></svg>
+                                        <button class="grid_span">
+                                            <svg aria-hidden="true" fill="none" focusable="false" height="20" viewBox="0 0 20 20" width="20" class="grid_span_a" id="cds-react-aria-190"><path fill-rule="evenodd" clip-rule="evenodd" d="M14.293 10L5.646 1.354l.708-.708L15.707 10l-9.353 9.354-.708-.707L14.293 10z" fill="currentColor"></path></svg>
                                             <div class="label_group">
                                                 <span>Duration</span>
                                             </div>
@@ -707,8 +707,8 @@
                             <div class="technology">
                                 <div class="grid">
                                     <h3>
-                                        <button>
-                                            <svg aria-hidden="true" fill="none" focusable="false" height="20" viewBox="0 0 20 20" width="20" class="cds-AccordionHeader-chevron css-1u8qly9" id="cds-react-aria-190"><path fill-rule="evenodd" clip-rule="evenodd" d="M14.293 10L5.646 1.354l.708-.708L15.707 10l-9.353 9.354-.708-.707L14.293 10z" fill="currentColor"></path></svg>
+                                        <button class="grid_span">
+                                            <svg aria-hidden="true" fill="none" focusable="false" height="20" viewBox="0 0 20 20" width="20" class="grid_span_a" id="cds-react-aria-190"><path fill-rule="evenodd" clip-rule="evenodd" d="M14.293 10L5.646 1.354l.708-.708L15.707 10l-9.353 9.354-.708-.707L14.293 10z" fill="currentColor"></path></svg>
                                             <div class="label_group">
                                                 <span>Skills</span>
                                             </div>
@@ -723,8 +723,8 @@
                             <div class="technology">
                                 <div class="grid">
                                     <h3>
-                                        <button>
-                                            <svg aria-hidden="true" fill="none" focusable="false" height="20" viewBox="0 0 20 20" width="20" class="cds-AccordionHeader-chevron css-1u8qly9" id="cds-react-aria-190"><path fill-rule="evenodd" clip-rule="evenodd" d="M14.293 10L5.646 1.354l.708-.708L15.707 10l-9.353 9.354-.708-.707L14.293 10z" fill="currentColor"></path></svg>
+                                        <button class="grid_span">
+                                            <svg aria-hidden="true" fill="none" focusable="false" height="20" viewBox="0 0 20 20" width="20" class="grid_span_a" id="cds-react-aria-190"><path fill-rule="evenodd" clip-rule="evenodd" d="M14.293 10L5.646 1.354l.708-.708L15.707 10l-9.353 9.354-.708-.707L14.293 10z" fill="currentColor"></path></svg>
                                             <div class="label_group">
                                                 <span>Subtitles</span>
                                             </div>
@@ -739,8 +739,8 @@
                             <div class="technology">
                                 <div class="grid">
                                     <h3>
-                                        <button>
-                                            <svg aria-hidden="true" fill="none" focusable="false" height="20" viewBox="0 0 20 20" width="20" class="cds-AccordionHeader-chevron css-1u8qly9" id="cds-react-aria-190"><path fill-rule="evenodd" clip-rule="evenodd" d="M14.293 10L5.646 1.354l.708-.708L15.707 10l-9.353 9.354-.708-.707L14.293 10z" fill="currentColor"></path></svg>
+                                        <button class="grid_span">
+                                            <svg aria-hidden="true" fill="none" focusable="false" height="20" viewBox="0 0 20 20" width="20" class="grid_span_a" id="cds-react-aria-190"><path fill-rule="evenodd" clip-rule="evenodd" d="M14.293 10L5.646 1.354l.708-.708L15.707 10l-9.353 9.354-.708-.707L14.293 10z" fill="currentColor"></path></svg>
                                             <div class="label_group">
                                                 <span>Educator</span>
                                             </div>
